--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             <li id="pr">
               <h3 class="list-group-item-heading"><a href="javascript:void(0)">Projects</a></h3>
                 <p id="projects" class="list-group-item-text">
+                  <a href="http://wikisearch.timlongoria.com" target="_blank">Wikipedia Viewer<i class="fa fa-external-link"></i></a><br>
                   <a href="http://weather.timlongoria.com" target="_blank">Local Weather<i class="fa fa-external-link"></i></a><br>
                   <a href="http://transition.timlongoria.com" target="_blank">Robot's Don't Drive...Yet<i class="fa fa-external-link"></i></a><br>
                   <a href="http://tribute.timlongoria.com" target="_blank">Jojo & Lucent Tribute<i class="fa fa-external-link"></i></a><br>
